# ros2_rover

./: frames_2026-06-07_16.51.40.gv
install/: local_setup.sh  setup.sh
log/: latest_build
src/: README.md
src/rover_bringup/: CMakeLists.txt  package.xml
src/rover_bringup/launch/: ublox.launch.py  urg_node.launch.py
src/rover_description/: CMakeLists.txt
src/rover_description/urdf/: materials.xacro
src/rover_description/urdf/bases/: differential.urdf.xacro
src/rover_description/urdf/sensors/: all_sensors.urdf.xacro  hokuyo.urdf.xacro
src/rover_description/urdf/wheels/: corner.urdf.xacro
src/rover_gazebo/: CMakeLists.txt
src/rover_gazebo/include/rover_gazebo/: ground_truth_remapper_node.hpp  motors_command_parser_node.hpp  odometry_node.hpp
src/rover_gazebo/launch/: curiosity.launch.py  gazebo.launch.py  mars.launch.py  moon.launch.py
src/rover_gazebo/launch/include/: spawn.launch.py
src/rover_gazebo/models/curiosity_path/: model.config
src/rover_gazebo/models/jaggedrock/: model.config  model.sdf
src/rover_gazebo/models/low_moon/: model.config
src/rover_gazebo/models/mars_terrain/: model.config  model.sdf
src/rover_gazebo/models/rock9/: model.sdf
src/rover_gazebo/models/rockformation/: model.config  model.sdf
src/rover_gazebo/models/terrain/: model.config  model.sdf
src/rover_gazebo/rviz/: default.rviz
src/rover_gazebo/src/: ground_truth_remapper_node.cpp  motors_command_parser_node.cpp  odometry_node.cpp
src/rover_gazebo/worlds/: curiosity.world  empty.world  low_moon.world  mars.world
src/rover_localization/: CMakeLists.txt  package.xml
src/rover_localization/config/: ekf.yaml
src/rover_localization/launch/: ekf.launch.py  rtabmap.launch.py
src/rover_motor_controller/: setup.py
src/rover_motor_controller/launch/: motor_controller.launch.py
src/rover_motor_controller_cpp/: CMakeLists.txt  package.xml
src/rover_motor_controller_cpp/src/: controller_node_main.cpp  vel_parser_node_main.cpp
src/rover_msgs/: CMakeLists.txt  package.xml
src/rover_navigation/: CMakeLists.txt
src/rover_navigation/launch/: bringup.launch.py
src/rover_service/: install.sh  rover.sh
src/rover_teleop/: setup.py
(+124 files in other folders)
